DTGB-27: Fixed text behind logo on the maintenance page

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -167,3 +167,14 @@ body.gent-auth-bar {
     display: none;
   }
 }
+
+.maintenance-page {
+  .top-section {
+    .site__header {
+      background-color: transparent;
+      .brand {
+        position: relative;
+      }
+    }
+  }
+}
